Them markdown all

--- a/penguins.ipynb
+++ b/penguins.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 249,
+   "execution_count": 171,
    "id": "4ade48ce",
    "metadata": {},
    "outputs": [],
@@ -47,19 +47,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "48678686",
+   "metadata": {},
+   "source": [
+    "### 2.1 Draw the label distribution in the dataset\n",
+    "- This function visualizes the distribution of labels in the dataset before and after splitting it into training and testing sets. It first plots the class distribution of the original dataset, followed by the distribution of labels in both the training and test sets. This helps in assessing whether the label distribution is balanced across all sets after splitting."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 250,
-   "id": "1c3c2efd",
+   "execution_count": 172,
+   "id": "bda30f47",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#function\n",
     "def plot_class_distribution(labels, title, ax):\n",
     "    sns.countplot(x=labels, ax=ax)\n",
     "    ax.set_title(title)\n",
     "    ax.set_xlabel(\"Class\")\n",
     "    ax.set_ylabel(\"Count\")\n",
-    "    \n",
+    "\n",
+    "def visualizeDataset(Y_original, Y_train, Y_test, size_train, size_test):\n",
+    "    figure, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
+    "    plot_class_distribution(Y_original, \"Original Dataset\", axes[0])\n",
+    "    plot_class_distribution(Y_train, f\"Training Set ({size_train}%)\", axes[1])\n",
+    "    plot_class_distribution(Y_test, f\"Test Set ({size_test}%)\", axes[2])\n",
+    "\n",
+    "    print(f\"Visualize dataset {size_train}/{size_test}\")\n",
+    "    plt.tight_layout()\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "792ce504",
+   "metadata": {},
+   "source": [
+    "### 2.2 Splitting the Dataset, Encoding Features, and Training the Decision Tree Model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "225f13ea",
+   "metadata": {},
+   "source": [
+    "- This function performs the following steps:\n",
+    "    - Splits the dataset into training and testing sets based on a given ratio, ensuring stratified sampling to maintain label distribution.\n",
+    "    - Encodes the features using one-hot encoding to prepare the data for model training.\n",
+    "    - Trains a Decision Tree Classifier (`DecisionTreeClassifier`) on the encoded training data.\n",
+    "    - Predicts labels for the encoded testing data.\n",
+    "\n",
+    "- The function returns:\n",
+    "    - The original training and testing datasets after splitting.\n",
+    "    - The encoded training and testing datasets.\n",
+    "    - The trained Decision Tree model.\n",
+    "    - The predicted labels for the testing dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 173,
+   "id": "c783a871",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def trainData(X, Y, size_test):\n",
     "    X_train, X_test, Y_train, Y_test = train_test_split(\n",
     "        X, Y,\n",
@@ -74,18 +126,75 @@
     "    clf = DecisionTreeClassifier(criterion='entropy',random_state=42)\n",
     "    clf = clf.fit(X_train, Y_train)\n",
     "    Y_predict = clf.predict(X_test)\n",
-    "    return X_train, X_test, Y_train, Y_test, clf, Y_predict\n",
+    "    return X_train, X_test, Y_train, Y_test, clf, Y_predict"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "28e16030",
+   "metadata": {},
+   "source": [
+    "### 2.3 Visualizing a Decision Tree from a Trained Model\n",
     "\n",
-    "def visualizeDataset(Y_original, Y_train, Y_test, size_train, size_test):\n",
-    "    figure, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
-    "    plot_class_distribution(Y_original, \"Original Dataset\", axes[0])\n",
-    "    plot_class_distribution(Y_train, f\"Training Set ({size_train}%)\", axes[1])\n",
-    "    plot_class_distribution(Y_test, f\"Test Set ({size_test}%)\", axes[2])\n",
+    "#### 2.3.1 Decision Tree: Iterative Dichotomiser 3 (ID3)\n",
     "\n",
-    "    print(f\"Visualize dataset {size_train}/{size_test}\")\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "- **Entropy**\n",
+    "    - The expected value of self-information (entropy):\n",
+    "    \n",
+    "    $$\n",
+    "    Entropy = -\\sum_{i}^{n} p_i \\log_{2}(p_i)\n",
+    "    $$\n",
     "\n",
+    "    - The entropy function reaches its minimum value when one of the $p_i$ values equals 1, and reaches its maximum value when all $p_i$ values are equal. These properties make entropy a measure of the level of disorder or randomness in a system.\n",
+    "\n",
+    "- **Information Gain of an Attribute A**\n",
+    "  \n",
+    "    - The information gain when classifying the dataset $D$ by attribute $A$ is calculated as:\n",
+    "\n",
+    "    $$\n",
+    "    Gain(A) = Entropy(D) - Entropy_{A}(D)\n",
+    "    $$\n",
+    "\n",
+    "    - At each node in the ID3 algorithm, the attribute selected is the one with the highest information gain among the remaining attributes.\n",
+    "\n",
+    "#### 2.3.2 One-Hot Encoding\n",
+    "\n",
+    "- **General Formula**\n",
+    "\n",
+    "    - Suppose we have a categorical feature X  with n different values. Each value of X will be represented by a binary vector of length n. If $x_i$  is a value of X, then the One-Hot Encoding vector of $x_i$ is given by:\n",
+    "\n",
+    "$$\n",
+    "v(x_i) = [0, 0, \\dots, 1, \\dots, 0]\n",
+    "$$  \n",
+    "    - Where:\n",
+    "        - The i-th position in the vector is 1, representing the value $x_i$ in the list of categorical values.\n",
+    "        - All other positions in the vector are 0.\n",
+    "\n",
+    "\n",
+    "- **One-Hot Encoding Process**\n",
+    "    - The process includes:\n",
+    "        1. Identifying all the categorical values in the dataset.\n",
+    "        2. Creating a binary vector for each categorical value with a length equal to the number of categorical values.\n",
+    "        3. Placing a 1 in the position corresponding to the categorical value and placing 0 in all other positions.\n",
+    "\n",
+    "- **Example**\n",
+    "    - For the feature \"Color\" with values \"Red\", \"Green\", and \"Blue\", the encoded result will be:\n",
+    "        - \"Red\" → (1, 0, 0)\n",
+    "        - \"Green\" → (0, 1, 0)\n",
+    "        - \"Blue\" → (0, 0, 1)\n",
+    "\n",
+    "#### 2.3.3 The role of function\n",
+    "\n",
+    "- The `buildTree` and `drawTree` function is responsible for visualizing a trained decision tree. Specifically, it retrieves the feature names from the training dataset, exports the tree structure in the DOT format, converts it into an image, and then displays it. This function helps users easily observe and analyze how the model makes decisions based on the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 174,
+   "id": "a9ccdb4a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def buildTree(clf, X_train, class_names):\n",
     "    dot_data = StringIO()\n",
     "    export_graphviz(clf, out_file=dot_data,  \n",
@@ -99,41 +208,125 @@
     "def drawTree(dot_data, size_train, size_test):\n",
     "    print(f\"Decision tree with dataset {size_train}/{size_test}\")\n",
     "    graph = pydotplus.graph_from_dot_data(dot_data.getvalue())\n",
-    "    display(Image(graph.create_png()))  # hiển thị trực tiếp trong notebook    \n",
-    "    \n",
-    "def drawTreeWithDepth(dot_data, depth):\n",
-    "    graph = pydotplus.graph_from_dot_data(dot_data.getvalue())\n",
-    "    print(f\"Decision Tree (max_depth={depth})\")\n",
-    "    display(Image(graph.create_png()))  # hiển thị đúng trong notebook\n",
-    "    \n",
+    "    display(Image(graph.create_png()))  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "829bb93d",
+   "metadata": {},
+   "source": [
+    "### 2.4 Draw Classification Report \n",
+    "- The `classificationReport` function prints a classification report and displays the confusion matrix, including metrics such as accuracy, recall, and F1 score for each class to evaluate the performance of the classification model and display the training and testing ratios along with the class labels."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
+   "id": "f326b381",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def classificationReport(Y_test, Y_predict, size_train, size_test):\n",
     "    print(f\"Classification Report ({size_train}/{size_test}):\\n\")\n",
-    "    print(classification_report(Y_test, Y_predict))\n",
-    "    \n",
+    "    print(classification_report(Y_test, Y_predict))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ce8dc2e",
+   "metadata": {},
+   "source": [
+    "### 2.5 Draw Confusion Matrix \n",
+    "- The `confusionMatrixReport` function calculates and visualizes the confusion matrix for a classification model. The function then creates a heatmap of the confusion matrix, helping to visualize the performance of the classification model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
+   "id": "a861519e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def confusionMatrixReport(Y_test, Y_predict, clf, size_train, size_test):\n",
     "    print(f\"Confusion Matrix (Depth={clf.tree_.max_depth}, {size_train}/{size_test} split):\\n\")\n",
     "    cm = confusion_matrix(Y_test, Y_predict)\n",
-    "    # Plotting confusion matrix as a heatmap for better visualization\n",
+    "    \n",
     "    plt.figure(figsize=(8, 6))\n",
     "    sns.heatmap(cm, annot=True, fmt='d', cmap='Blues', xticklabels=clf.classes_, yticklabels=clf.classes_)\n",
     "    plt.title(f\"Confusion Matrix ({size_train}/{size_test} Split)\")\n",
     "    plt.xlabel(\"Predicted\")\n",
     "    plt.ylabel(\"True\")\n",
-    "    plt.show()\n",
-    "    \n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f3b0842c",
+   "metadata": {},
+   "source": [
+    "### 2.6 Draw Decision Tree with Varying Max Depth\n",
+    "- The `drawTreeWithDepth` function evaluates the performance of a decision tree classifier by testing different values for the `max_depth` parameter. It fits a decision tree for each value of `max_depth`, calculates the accuracy on the test set, and visualizes the decision tree. This allows for an assessment of how changing the depth of the tree affects the model's performance."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "id": "20e2bd29",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def drawTreeWithDepth(dot_data, depth):\n",
+    "    graph = pydotplus.graph_from_dot_data(dot_data.getvalue())\n",
+    "    print(f\"Decision Tree (max_depth={depth})\")\n",
+    "    display(Image(graph.create_png())) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8eee791d",
+   "metadata": {},
+   "source": [
+    "### 2.7 Draw Accuracy Table Varying Max Depths\n",
+    "- The `accuraciesReport` function is used to display a table showing the accuracy scores of a Decision Tree classifier for different `max_depth` values. The accuracies are presented in a tabular format, allowing easy comparison of how the performance changes with varying tree depths.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 178,
+   "id": "1259291c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def accuraciesReport(accuracies, max_depth):\n",
     "    results = pd.DataFrame({\n",
     "        'max_depth': ['None'] + max_depth[1:],\n",
     "        'Accuracy': accuracies\n",
     "    })\n",
     "    results = results.set_index(\"max_depth\").T\n",
-    "    print(results.to_string())\n",
+    "    print(results.to_string())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc0a746",
+   "metadata": {},
+   "source": [
+    "### 2.8 Plotting Accuracy vs Max Depth for Decision Tree\n",
+    "- The `chartReport` function is used to plot a graph showing how the accuracy of a Decision Tree model changes with different `max_depth` values. The chart helps visualize the relationship between the tree depth and the model's performance.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "id": "75cc6953",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def chartReport(accuracies):\n",
-    "    # Vẽ biểu đồ\n",
     "    plt.figure(figsize=(8, 6))\n",
     "    plt.plot(['None', 2, 3, 4, 5, 6, 7], accuracies, marker='o')\n",
     "\n",
-    "    # Hiển thị giá trị độ chính xác tại các điểm\n",
     "    for i, acc in enumerate(accuracies):\n",
     "        plt.text(i, acc, f'{acc:.2f}', ha='center', va='bottom')\n",
     "\n",
@@ -149,25 +342,22 @@
    "id": "c3a82719",
    "metadata": {},
    "source": [
-    "## 2. Data Preprocessing"
+    "## 3. Data Preprocessing"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 251,
+   "execution_count": 180,
    "id": "9dfc9aa7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#preprocessing data\n",
     "class_names = {}\n",
     "\n",
     "for col in penguins.columns:\n",
     "    if penguins[col].dtype == 'object':\n",
-    "        # Lưu lại tên các nhãn cho từng cột dạng chuỗi\n",
     "        class_names[col] = penguins[col].unique().tolist()\n",
     "\n",
-    "# One-hot encoding cho tất cả các cột dạng object\n",
     "penguins_encoded = pd.get_dummies(penguins, dummy_na=True)\n",
     "\n",
     "feature = [col for col in penguins_encoded.columns if not col.startswith('species_')]\n",
@@ -204,12 +394,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 181,
    "id": "6307c596",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# #Train data 40/60\n",
     "X_train_40_60, X_test_40_60, Y_train_40_60, Y_test_40_60, clf_40_60, Y_predict_40_60 = trainData(X, Y, 0.6)"
    ]
   },
@@ -223,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 182,
    "id": "6f642044",
    "metadata": {},
    "outputs": [
@@ -246,7 +435,6 @@
     }
    ],
    "source": [
-    "# # Visualize dataset 40/60\n",
     "visualizeDataset(Y_original, Y_train_40_60, Y_test_40_60, 40, 60)"
    ]
   },
@@ -268,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 183,
    "id": "9aa09d56",
    "metadata": {},
    "outputs": [],
@@ -287,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 184,
    "id": "ed6b6a2d",
    "metadata": {},
    "outputs": [
@@ -332,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 185,
    "id": "7fdd8c71",
    "metadata": {},
    "outputs": [],
@@ -351,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 186,
    "id": "c4da8765",
    "metadata": {},
    "outputs": [
@@ -396,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 187,
    "id": "531b23ec",
    "metadata": {},
    "outputs": [],
@@ -415,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": 188,
    "id": "d6be1565",
    "metadata": {},
    "outputs": [
@@ -468,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": 189,
    "id": "4e7ac152",
    "metadata": {},
    "outputs": [
@@ -506,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": 190,
    "id": "1754478b",
    "metadata": {},
    "outputs": [
@@ -543,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": 191,
    "id": "c9198ac1",
    "metadata": {},
    "outputs": [
@@ -588,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 192,
    "id": "2e1a1747",
    "metadata": {},
    "outputs": [
@@ -626,7 +814,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": 193,
    "id": "f5f70478",
    "metadata": {},
    "outputs": [
@@ -663,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 194,
    "id": "ba02ea8f",
    "metadata": {},
    "outputs": [
@@ -708,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": 195,
    "id": "d6787e89",
    "metadata": {},
    "outputs": [
@@ -746,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": 196,
    "id": "2a411fad",
    "metadata": {},
    "outputs": [
@@ -783,7 +971,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": 197,
    "id": "928c6d3f",
    "metadata": {},
    "outputs": [
@@ -828,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 198,
    "id": "dba63051",
    "metadata": {},
    "outputs": [
@@ -866,7 +1054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": 199,
    "id": "cb937483",
    "metadata": {},
    "outputs": [
@@ -903,7 +1091,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 200,
    "id": "0ea6971d",
    "metadata": {},
    "outputs": [
@@ -948,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 201,
    "id": "9c1b4911",
    "metadata": {},
    "outputs": [],
@@ -976,7 +1164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 202,
    "id": "97b027e5",
    "metadata": {},
    "outputs": [
@@ -1117,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 203,
    "id": "b20337cc",
    "metadata": {},
    "outputs": [
@@ -1144,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 204,
    "id": "ad502403",
    "metadata": {},
    "outputs": [
